--- a/src/components/TankaPage.module.scss
+++ b/src/components/TankaPage.module.scss
@@ -1,5 +1,5 @@
 .container {
-  max-width: 800px;
+  max-width: 1600px;
   margin: 0 auto;
   padding: 2rem;
 }
@@ -12,7 +12,7 @@
 }
 
 .content {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   line-height: 1.8;
   margin: 0 0 1.5rem;
   text-align: center;
